--- a/TestControlTool.Web/Views/Task/NewTestModal.cshtml
+++ b/TestControlTool.Web/Views/Task/NewTestModal.cshtml
@@ -48,6 +48,7 @@
 </div>
 
 <div style="display: block" id="ListItemsModalDiv"></div>
+<div style="display: block" id="DictionaryItemsModalDiv"></div>
 
 <script type="text/javascript">
     /*$('#NewTestType').select2({
