--- a/TestControlTool.Web/Views/Home/Machines.cshtml
+++ b/TestControlTool.Web/Views/Home/Machines.cshtml
@@ -58,9 +58,14 @@
         </ul>
     </div>
 </p>
+<script src="@Url.Content("~/Scripts/bootbox.min.js")"></script>
 <script type="text/javascript">
     function removeMachine(id) {
-        window.location.href = '@Url.Action("Delete", "Machine")/' + id;
+        bootbox.confirm("<h4>Are you sure?</h4>", function (result) {
+            if (result) {
+                window.location.href = '@Url.Action("Delete", "Machine")/' + id;
+            }
+        });
     }
     
     function showMachineConfiguratingModal() {
