--- a/TestControlTool.Web/Views/Task/TestForm.cshtml
+++ b/TestControlTool.Web/Views/Task/TestForm.cshtml
@@ -58,6 +58,42 @@
     var isEditDictionaryItem = [];
     var dictionaryItemToEdit = [];
 
+    function editDictionaryItem(obj) {
+        var ul = $(obj).parent().parent();
+        var parentId = ul.attr('id');
+        var keyType = ul.attr('keyType');
+        var valueType = ul.attr('valueType');
+
+        $('#DictionaryItemsModalDiv').load('@Url.Action("DictionaryItemModal", "Task")', { keyTypeName: keyType, valueTypeName: valueType, suiteType: suiteType, parentProperty: parentId }, function () {
+            $('#DictionaryItemsLabel-' + parentId).text($('#DictionaryItemsLabel-' + parentId).text().replace('Add new', 'Edit'));
+            $('#DictionaryItemsButton-' + parentId).val('Apply');
+
+            var jsonKeyObject = JSON.parse($(obj).parent().attr('jsonKey'));
+            var jsonValueObject = JSON.parse($(obj).parent().attr('jsonValue'));
+            
+            var keySingleItem = $("#itemsProperties-" + parentId).find('#newKeyItemEditorBox-' + parentId)[0];
+            var valueSingleItem = $("#itemsProperties-" + parentId).find('#newValueItemEditorBox-' + parentId)[0];
+            
+            if (keySingleItem != undefined) {
+                $(keySingleItem).val(decodeValue(jsonKeyObject));
+            } else {
+                fillFormWithObject("KeyDiv-" + parentId, jsonKeyObject);
+            }
+            
+            if (valueSingleItem != undefined) {
+                $(valueSingleItem).val(decodeValue(jsonValueObject));
+            } else {
+                fillFormWithObject("ValueDiv-" + parentId, jsonValueObject);
+            }
+            
+            dictionaryItemToEdit.push($(obj).parent());
+            isEditDictionaryItem.push(true);
+            dictionaryName.push(null);
+
+            $('#DictionaryItemsModal-' + parentId).modal('show');
+        });
+    }
+    
     function editListItem(obj) {
         var ul = $(obj).parent().parent();
         var parentId = ul.attr('id');
@@ -68,15 +104,15 @@
             $('#ListItemsButton-' + parentId).val('Apply');
 
             var jsonObject = JSON.parse($(obj).parent().attr('json'));
-            
+
             var singleItem = $("#itemsProperties-" + parentId).find('#newItemEditorBox-' + parentId)[0];
-            
+
             if (singleItem != undefined) {
                 $(singleItem).val(decodeValue(jsonObject));
             } else {
                 fillFormWithObject("itemsProperties-" + parentId, jsonObject);
             }
-            
+
             listItemToEdit.push($(obj).parent());
             isEditListItem.push(true);
             listName.push(null);
@@ -93,9 +129,9 @@
             $('#ListItemsModal-' + list).modal('show');
         });
     }
-    
+
     function loadDictionaryItemsModal(keyType, valueType, list) {
-        $('#DictionaryItemsModalDiv').load('@Url.Action("DictionaryItemModal", "Task")', { keyTypeName: keyType, valueTypeName: valueType, suiteType: suiteType, parentProperty: list }, function () {
+        $('#DictionaryItemsModalDiv').load('/Task/DictionaryItemModal', { keyTypeName: keyType, valueTypeName: valueType, suiteType: suiteType, parentProperty: list }, function () {
             dictionaryName.push(list);
             dictionaryItemToEdit.push(null);
             isEditDictionaryItem.push(false);
